fix static code analysis issues.